--- a/index.html
+++ b/index.html
@@ -5,27 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Excursion</title>
-    <link rel="stylesheet" type="text/css" href="/resources/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css" />
   </head>
   <body>
     <header>
       <h1>Discover hidden places in the world around you</h1>
-      <p><a href="#">Download Excursion (Coming soon!)</a></p>
     </header>
 
     <main>
-      <video
-        src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4?_gl=1*1myr4nw*_ga*MTI3ODI3NTg3Ni4xNjUxMTkzNDMz*_ga_3LRZM6TM9L*MTY1NTQyMDk1NC42My4xLjE2NTU0MjIwNTguNTk."
-      ></video>
+      <p>
+        <a href="#">Download Excursion (Coming soon!)</a>
+        <video
+          autoplay
+          loop
+          src="resources/video/excursion.mp4"
+          type="video"
+        ></video>
+      </p>
+
       <h2>Your personal travel guide</h2>
       <p>
         Excursion remembers places you like, and recommends new points of
         interest around you.
       </p>
-      <img
-        src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg?_gl=1*qd62jk*_ga*MTI3ODI3NTg3Ni4xNjUxMTkzNDMz*_ga_3LRZM6TM9L*MTY1NTQyMDk1NC42My4xLjE2NTU0MjIwNTguNTk."
-        alt="tent overlooking a sunset"
-      />
+      <img src="resources/images/tent.jpeg" alt="tent overlooking a sunset" />
     </main>
   </body>
 </html>
