css and html adjustments

--- a/index.html
+++ b/index.html
@@ -8,27 +8,19 @@
     <link rel="stylesheet" type="text/css" href="resources/css/style.css" />
   </head>
   <body>
-    <header>
-      <h1>Discover hidden places in the world around you</h1>
-    </header>
-
-    <main>
-      <p>
-        <a href="#">Download Excursion (Coming soon!)</a>
-        <video
-          autoplay
-          loop
-          src="resources/video/excursion.mp4"
-          type="video"
-        ></video>
-      </p>
-
-      <h2>Your personal travel guide</h2>
-      <p>
-        Excursion remembers places you like, and recommends new points of
-        interest around you.
-      </p>
-      <img src="resources/images/tent.jpeg" alt="tent overlooking a sunset" />
-    </main>
+    <h1>Discover hidden places in the world around you</h1>
+    <p><a href="#">Download Excursion (Coming soon!)</a></p>
+    <video
+      autoplay
+      loop
+      src="resources/video/excursion.mp4"
+      type="video"
+    ></video>
+    <h2>Your personal travel guide</h2>
+    <h4>
+      Excursion remembers places you like, and recommends new points of interest
+      around you.
+    </h4>
+    <img src="resources/images/tent.jpeg" alt="tent overlooking a sunset" />
   </body>
 </html>
