css and html adjustments

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
       Excursion remembers places you like, and recommends new points of interest
       around you.
     </h4>
-    <img src="resources/images/tent.jpeg" alt="tent overlooking a sunset" />
+    <p>
+      <img src="resources/images/tent.jpeg" alt="tent overlooking a sunset" />
+    </p>
+    <p><img src="resources/images/phone_icon.png" alt="icon of phone" /></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p><a href="#">Download Excursion (Coming soon!)</a></p>
+    <p class="footer">&copy; Excursion</p>
   </body>
 </html>
