--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <p>
       <img src="resources/images/tent.jpeg" alt="tent overlooking a sunset" />
     </p>
-    <p><img src="resources/images/phone_icon.png" alt="icon of phone" /></p>
+    <p>
+      <img src="resources/images/phone_icon.png" alt="icon of phone" />
+    </p>
     <h2>Coming Soon for iPhone and Android</h2>
     <p><a href="#">Download Excursion (Coming soon!)</a></p>
     <p class="footer">&copy; Excursion</p>
